Remove deprecated URL(String) usage (#795)
Signed-off-by: Heemin Kim <heemin@amazon.com>