@@ -7,6 +7,7 @@ package org.opensearch.geospatial.ip2geo.action;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
@@ -109,9 +110,9 @@ public class PutDatasourceRequest extends ActionRequest {
      */
     private void validateEndpoint(final ActionRequestValidationException errors) {
         try {
-            URL url = new URL(endpoint);
+            URL url = URI.create(endpoint).toURL();
             url.toURI(); // Validate URL complies with RFC-2396
-        } catch (MalformedURLException | URISyntaxException e) {
+        } catch (MalformedURLException | URISyntaxException | IllegalArgumentException e) {
             log.info("Invalid URL[{}] is provided", endpoint, e);
             errors.addValidationError("Invalid URL format is provided");
         }
