@@ -8,6 +8,7 @@ package org.opensearch.geospatial.ip2geo.action;
 import static org.opensearch.geospatial.ip2geo.common.Ip2GeoLockService.LOCK_DURATION_IN_SECONDS;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.Instant;
@@ -188,7 +189,7 @@ public class PutDatasourceTransportAction extends HandledTransportAction<PutData
     private void validateManifestFile(final PutDatasourceRequest request) {
         DatasourceManifest manifest;
         try {
-            URL url = new URL(request.getEndpoint());
+            URL url = URI.create(request.getEndpoint()).toURL();
             manifest = DatasourceManifest.Builder.build(url);
         } catch (Exception e) {
             log.info("Error occurred while reading a file from {}", request.getEndpoint(), e);
@@ -198,8 +199,8 @@ public class PutDatasourceTransportAction extends HandledTransportAction<PutData
         }
 
         try {
-            new URL(manifest.getUrl()).toURI(); // Validate URL complies with RFC-2396
-        } catch (MalformedURLException | URISyntaxException e) {
+            URI.create(manifest.getUrl()).toURL().toURI(); // Validate URL complies with RFC-2396
+        } catch (MalformedURLException | URISyntaxException | IllegalArgumentException e) {
             log.info("Invalid URL[{}] is provided for url field in the manifest file", manifest.getUrl(), e);
             throw new IllegalArgumentException("Invalid URL format is provided for url field in the manifest file");
         }
